Edits ZVP chapter

--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -271,17 +271,17 @@ This thesis relies on the analysis of 1,2 and 3D \ac{PIC} simulations, primarily
 3D simulation results are presented in Figure \ref{fig:zvp3d} alongside comparison to an equivalent 2D simulation.
 \begin{figure}
 	\centering
-	\includegraphics[width=1\linewidth]{figures/zvp/zvp_3D}
-	\caption[Simulation results from a 3D \ac{PIC} simulation of the \ac{ZVP} mechanism. ]{Simulation results from a 3D \ac{PIC} simulation of the \ac{ZVP} mechanism. a) The initialised electron number density. b) The electron number density several cycles later, the plasma bulk is intact, however there is evidence of instabilities and electron bunches propagating through and around the plasma. c) The electron kinetic energy density at the same timestep. Note that the scale has been clipped to enable observation of both electron bunches propagating through and around the plasma bulk. Significantly higher energy density, corresponding to a higher charge density and attosecond duration for the electron bunches propagating around the bulk. d-f) Plots clipped through $z=\lambda_\mathrm{L}/2$ for a-c) respectively for better clarity on the internal structure of the plasma bulk. The accompanying plots for figures e) and f) are corresponding 2D PIC simulation results.}
+	\includegraphics[width=0.9\linewidth]{figures/zvp/zvp_3D}
+	\caption[The numerical simulation using a 3D \ac{PIC} code of the \ac{ZVP} mechanism.]{Simulation results from a 3D \ac{PIC} simulation of the \ac{ZVP} mechanism. a) The initialised electron number density. b) The electron number density several cycles later, the plasma bulk is intact, however there is evidence of instabilities and electron bunches propagating through and around the plasma. c) The electron kinetic energy density at the same timestep. Note that the scale has been clipped to enable observation of both electron bunches propagating through and around the plasma bulk. Significantly higher energy density, corresponding to a higher charge density and attosecond duration is observed for the electron bunches propagating around the bulk. d-f) Plots clipped through $z=\lambda_\mathrm{L}/2$ for a-c) respectively for to access the internal structure of the plasma bulk. The accompanying plots for figures e) and f) are equivalent 2D PIC simulations demonstrating excellent agreement.}
 	\label{fig:zvp3d}
 \end{figure}
-Simulation parameters are given in Table \ref{tab:parameters}, such parameters are compatible with the 10 PW ELI-NP state-of-the-art short pulse laser facility \cite{tanakaCurrentStatusHighlights2020} and foam targets.
+Simulation parameters are given in Table \ref{tab:parameters}, such parameters are compatible with the 10 PW ELI-NP state-of-the-art short pulse laser facility \cite{tanakaCurrentStatusHighlights2020} incident on foam targets.
 \begin{table}[]
 	\begin{center}
 	\begin{tabular}{lll}
 		\hline \hline
 		\multicolumn{3}{c}{Laser (3D, normal incidence)}   \\
-		Parameters                                        & Real                                 & Sim                         \\ \hline
+		Parameters                                        & Real                                 & Smilei                         \\ \hline
 		Wavelength, $\lambda$ (nm)                        & 1060                                 & 2$\pi$                      \\
 		Angular frequency, $\omega_\mathrm{L}$ (fs$^{-1}$)         & 1.8                                  & 1                           \\
 		Beam waist, $w_\mathrm{L}$ (nm)                            & 6$\lambda$                           & 12$\pi$                     \\
@@ -322,27 +322,27 @@ Simulation parameters are given in Table \ref{tab:parameters}, such parameters a
 	\end{center}
 	\caption{\label{tab:parameters} \textbf{Simulation parameters in both real and normalised Smilei simulation units for the 3D3V simulations.} }
 \end{table}
-Figure \ref{fig:zvp3d}c) clearly demonstrates the existence of high energy density electron bunches propagating through the plasma bulk in the direction of the laser pulse. Note that this ZVP criterion is a direct consequence of conservation of transverse momentum inside the plasma bulk where the laser fields cannot propagate. Figure \ref{fig:zvp3d}b) shows these bunches escape to the rear of the bulk but lose energy as they do so. Looking now at figure \ref{fig:zvp3d}e) and the internal structure of the plasma bulk. These bunches drive two-stream and filamentation instabilities \cite{bretMultidimensionalElectronBeamplasma2010}. The bulk propagating bunches are accompanied by higher density electron bunches to either side of the plasma block with the side switching every half laser pulse cycle. 
+Figure \ref{fig:zvp3d}c) clearly demonstrates the existence of high energy density electron bunches propagating through the plasma bulk in the direction of the laser pulse. Note that this ZVP criterion is a direct consequence of conservation of transverse momentum inside the plasma bulk where the laser fields cannot propagate. Figure \ref{fig:zvp3d}b) shows these bunches escape to the rear of the bulk but lose energy as they do so. Looking now at figure \ref{fig:zvp3d}e) and the internal structure of the plasma bulk. These bunches drive two-stream and filamentation instabilities \cite{bretMultidimensionalElectronBeamplasma2010}. The bulk propagating electron bunches are accompanied by higher density electron bunches to either side of the plasma block with the side of emission alternating every half laser pulse cycle. 
 
-The thickness of the target does not impact the interaction and is chosen for computational efficiency, indeed it is standard to consider such targets of thickness $\ge \lambda_\mathrm{L}$ as bulk targets \cite{dollarEnhancedLaserAbsorption2017}, however, for sufficiently long pulse durations, the effect of hole boring necessitates thicker targets to make this approximation as will be required in the following chapter.
+\subsubsection{Considerations and convergence of 3D simulations}
+The plasma specifications were chosen to minimise computational load while ensuring numerical convergence, requiring over 100 billion macroparticles. The electron temperature is raised significantly higher than that which would be expected in such a laser-plasma system so as to resolve the Debye length. Anticipated plasma temperatures are calculated using 1D HYADES simulations in the following Chapter. While this temperature is unphysical and will lead to some small plasma expansion over the course of the simulation (negligible on these timescales), the temperature remains small compared to that imparted to the electron bunches by the laser pulse. The striking similarity between the 2 and 3D simulation results is a natural consequence of the 2D nature of the interaction geometry. It is, however, still reassuring to show that previous work withstands the test of reality's geometry and the simple elegance of the ZVP mechanism is not lost in the chaos. 
 
-For the 3D simulations only, particles were initialised randomly instead of regularly to avoid numerical errors. Regularly initialised plasma blocks in 3D simulations blow apart very quickly due to spurious large amplitude fields generated on the large plasma surface due to macroscopic electron-ion charge separation at initialisation. 2D simulations with randomly initialised particles tend to produce nano-structures reminiscet of cosmic filaments. This would appear erroneous as it is not present in equivalent 3D simulations and is likely due to the lack of degrees of freedom available in the system. This error can be reduced by increasing the plasma temperature.
+For the 3D simulations only, particles were initialised randomly not regularly to avoid numerical error. Regularly initialised plasma blocks in 3D simulations rapidly blow apart due to spurious large amplitude fields generated on the large plasma surfaces due to macroscopic electron-ion charge separation at initialisation. 2D simulations with randomly initialised particles tend to produce nano-structures reminiscent of the cosmic web. The absence of these structures in 3D is telling. Unsurprisingly this error can be reduced by increasing the plasma temperature.
 
-The plasma specifications were chosen to minimise computational load while ensuring numerical convergence, requiring over 100 billion macroparticles. The electron temperature is raised significantly higher than that which would be expected in such a laser-plasma system so as to resolve the Debye length. Anticipated plasma temperatures are calculated using 1D HYADES simulations in the following chapter. While this temperature is unphysical and will lead to some small plasma expansion over the course of the simulation, the temperature remains negligible compared to that imparted to the electron bunches by the laser pulse. The striking similarity between the 2 and 3D simulation results is a natural consequence of the 2D nature of the interaction geometry. It is, however, still reassuring to show that previous work withstands the stringent test of real universe geometry and the ZVP mechanism is not lost in the chaos.
+The longitudinal thickness of the target does not impact the interaction and is chosen for computational efficiency, indeed it is standard to consider such targets of thickness $\ge \lambda_\mathrm{L}$ as bulk targets \cite{dollarEnhancedLaserAbsorption2017}, however, for sufficiently long pulse durations, the effect of hole boring necessitates thicker targets to make this approximation as is necessary in the following Chapter.
 
-\subsubsection{Convergence of 3D simulations}
-The 3D simulation parameters were chosen to be consistent with previous work on the \ac{ZVP} mechanism, however, such simulations are cumbersome, limiting the number of simulations it is feasible to run. In order to query the defining characteristics outlined by Baeva, a lower resolution simulation was performed with similar parameters to the initial simulation. Comparisons between the simulation outputs are made in figure \ref{fig:zvp3dcomparelowres} in appendix \ref{sec:app-pic_convergence3D}. Good convergence is qualitatively demonstrated by the presence of characteristic features of the ZVP mechanism. While the instabilities are similar in structure, the change in seeding changes their exact positions. As instabilities are not the focus of this thesis this variation is of no cause for concern, however, while the characteristics remain similar, some caution must be taken with any quantitative results.
+The initial 3D simulation parameters were chosen to be consistent with previous work on the \ac{ZVP} mechanism, however, such simulations are cumbersome. In order to query the defining characteristics outlined by Baeva, a lower resolution simulation was performed with similar parameters to the initial simulation. Comparisons between the simulation outputs are made in Figure \ref{fig:zvp3dcomparelowres} in Appendix \ref{sec:app-pic_convergence3D}. Good convergence is qualitatively demonstrated by the presence of characteristic features of the ZVP mechanism. While the instabilities are similar in structure, the change in seeding changes their exact positions. As instabilities are not the focus of this thesis this variation is of no cause for concern.
 
 \subsubsection{Confirmation of ZVP in 3D}
 Figure \ref{fig:zvppropagatingzero} tracks the transverse momentum distribution along the polarisation axis of the laser pulse of an electron bunch during its ablative journey, clearly demonstrating the existence of a singular zero of the vector potential propagating through the electron bunch and away from the plasma bulk.
-
 \begin{figure}
 	\centering
 	\includegraphics[width=0.7\linewidth]{figures/zvp/zvp_propagating_zero}
-	\caption[Propagation of zeroes through the ablating ZVP electron bunch.]{Propagation of zeroes through the ablating ZVP electron bunch via the proxy of tranverse momentum conservation. The zero of the vector potential exists where the transverse momentum is macroscopically zero. Each line represents a timestep with time increasing with decreasing colour. With increasing time the bunch and the zero move in the -$\hat{\mathbf{x}}$-direction with the zero overtaking the electron bunch. The inset tracks the position of the zero of the vector potential with time.}
+	\caption[Propagation of a vector potential zero through the ablating ZVP electron bunch.]{Propagation of a vector potential zero through the ablating ZVP electron bunch via the proxy of tranverse momentum conservation. The zero of the vector potential exists where the transverse momentum is macroscopically zero. Each line represents a timestep with time increasing with decreasing colour. With increasing time the bunch and the zero move in the -$\hat{\mathbf{x}}$-direction with the zero overtaking the electron bunch. The inset tracks the position of the zero of the vector potential with time.}
 	\label{fig:zvppropagatingzero}
 \end{figure}
-The zero propagates at a speed of $\approx 1.4c$. In this simulation, the zero propagates through the bunch before it finishes crossing the pseudocapacitor and thus before it has acquired its maximum velocity. As previously discussed this reduces the coherency of the emitted radiation, this provides a new perspective from which to consider optimisation of HHG.
+% TODO the inset of \ref{fig:zvppropagatingzero}  has the wrong x-axis, code updated, just need to extract the plot and replace. (plot at bunches/bunches6/bunches_3D/9/3D_analysis.ipynb)
+The zero propagates at a speed of $\approx 1.4c$, corresponding to a surface velocity of $\approx 0.71c$. In this simulation, the zero propagates through the bunch over a few nanometres thus before it has acquired its maximum velocity from the pseudo-capacitor. As previously discussed this reduces the coherency of the emitted radiation, but provides a new perspective from which to consider optimisation of HHG.
 
 Further simulation results a presented in figure \ref{fig:zvp3ddynamics}.
 
@@ -352,7 +352,7 @@ Further simulation results a presented in figure \ref{fig:zvp3ddynamics}.
 	\caption[Electron dynamics in 3D PIC simulation for both linear and cirularly polarised relativistic laser pulses.]{Electron dynamics in a 3D PIC simulation. a) and b) Electron energy density for linearly and circularly polarised laser pulses respectively. c) and d) Electron longitudinal momentum for linearly and circularly polarised laser pulses respectively.  e) Electron density at the plasma surface streaked in time. f) Electron energy density at the plasma surface streaked in time.}
 	\label{fig:zvp3ddynamics}
 \end{figure}
-In figures \ref{fig:zvp3ddynamics}a)-d), comparisons are made in the electron energy distributions for simulations with zeros present in the vector potential (linearly polarised) and without (circularly polarised). Clearly zeroes are required for the formation of high energy, short duration attosecond bunches. From figure \ref{fig:zvp3ddynamics}a) it is clear that electron bunches are injected and propagate through the plasma bulk in the laser propagation direction. Figure \ref{fig:zvp3ddynamics}c) demonstrates the quasi-monoenergeticity of the high energy electron bunches as initially identified in 1D by Baeva. Although the shape in the phase space is more complex in 3D, the attosecond duration at a given energy is retained. Figures \ref{fig:zvp3ddynamics}e) and f) describe the surface dynamics. One can observe the high density bunches on the front surface with the peak in energy density occuring after acceleration across the pseudocapacitor. Figure \ref{fig:zvp3ddynamics}f) also explains the shape of the spectrum of figure \ref{fig:zvp3ddynamics}c), low energy electrons are turned back first and as all bunch electrons are ultrarelativistic, the higher energy electrons trail behind.
+In Figures \ref{fig:zvp3ddynamics}a)-d), comparisons are made in the electron energy distributions for simulations with zeros present in the vector potential (linearly polarised) and without (circularly polarised). Clearly zeroes are required for the formation of high energy, short duration attosecond bunches. From figure \ref{fig:zvp3ddynamics}a) it is clear that electron bunches are injected and propagate through the plasma bulk in the laser propagation direction. Figure \ref{fig:zvp3ddynamics}c) demonstrates the quasi-monoenergeticity of the high energy electron bunches as initially identified in 1D by Baeva. Although the shape in the phase space is more complex in 3D, the attosecond duration at a given energy is retained. Figures \ref{fig:zvp3ddynamics}e) and f) describe the surface dynamics. One can observe the high density bunches on the front surface with the peak in energy density occuring after acceleration across the pseudocapacitor. Figure \ref{fig:zvp3ddynamics}f) also explains the shape of the spectrum of Figure \ref{fig:zvp3ddynamics}c), low energy electrons are turned back first and as all bunch electrons are ultrarelativistic, the higher energy electrons trail behind.
 
 Finally, figure \ref{fig:zvphhgbeamfourier} compares the spectra of the reflected light in the presence and absence of zeros of the vector potential.
 \begin{figure}
