--- a/text/appendix-1.tex
+++ b/text/appendix-1.tex
@@ -65,7 +65,7 @@ where $\langle\rangle$ is the second central moment of the particle distribution
 \end{equation}
 here $dV = \Pi_jdx_jdp_j$ for $j = $L, T, T$'$.
 
-When working with emittances, most frequently in the literature it is the \textit{transverse geometric emittance}, $\epsilon^i_\mathrm{rms}$ that is discussed. This is a natural consequence of it being more readily accessible in experiments \cite{mcDonald Methods of emittance measurement 122-132 Springer, 1989}. The geometric and normalised emittances are related via
+When working with emittances, most frequently in the literature it is the \textit{transverse geometric emittance}, $\epsilon^i_\mathrm{rms}$ that is discussed. This is a natural consequence of it being more readily accessible in experiments \cite{mcdonaldMethodsEmittanceMeasurement1989}. The geometric and normalised emittances are related via
 \begin{equation}
 	\epsilon^i_\mathrm{rms} = \frac{\epsilon^i_\mathrm{rms}}{\gamma \beta_\mathrm{L}},
 \end{equation}
