--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -214,8 +214,8 @@
 %    page that just says "Appendices" to signal the end of your main text.
 \startappendices
 % Add or remove any appendices you'd like here:
-%\include{text/appendix-1}
-%\include{text/appendix-2}
+\include{text/appendix-1}
+\include{text/appendix-2}
 
 %%%%% REFERENCES
 
