--- a/references.bib
+++ b/references.bib
@@ -3180,6 +3180,13 @@
   file = {/Users/robintimmis/Zotero/storage/Z7QXW66E/Sloot - 2002 - Computational science-ICCS 2002 international con.pdf}
 }
 
+@inproceedings{seaboldskipperandperktoldjosefStatsmodelsEconometricStatistical2010,
+  title = {Statsmodels: {{Econometric}} and Statistical Modeling with Python},
+  author = {Seabold, Skipper {and} Perktold, Josef},
+  date = {2010},
+  eventtitle = {9th {{Python}} in {{Science Conference}}}
+}
+
 @article{sebbanFullCharacterizationHighgain2000,
   title = {Full Characterization of a High-Gain Saturated x-Ray Laser at 13.9 Nm},
   author = {Sebban, S. and Daido, H. and Sakaya, N. and Kato, Y. and Murai, K. and Tang, H. and Gu, Y. and Huang, G. and Wang, S. and Klisnick, A. and family=Zeitoun, given=Ph., given-i={{Ph}} and Koike, F. and Takenaka, H.},
