--- a/text/ch1-intro.tex
+++ b/text/ch1-intro.tex
@@ -370,7 +370,8 @@ where $p_\mathrm{T}$ is the electron momentum along the polarisation axis of the
 Note that this is only valid provided the electron does not radiate along the direction of polarisation as discussed by Sokolov \textit{et al} \cite{sokolovDynamicsEmittingElectrons2009}. The implications of \textit{Radiation Reaction }are discussed in the following section.
 
 \section{QED effects}
-Next generation laser facilities will enable the testing of decades old theoretical predictions of \ac{SF-QED}. Already Fedeli \textit{et al} have shown in simulations that current PW-class laser facilities can access the regime using an all-optical set up based on laser-solid surface interactions \cite{fedeliProbingStrongfieldQED2020}. The Schwinger Limit \textbf{CITE} $E_\mathrm{S} = \qty{1.32e18}{V.m^{-1}}$ is field intensity at which the vacuum becomes non-linear. If by some means an electron can be directed towards a plane electromagnetic wave, by consideration of the Lorentz transformations of electromagnetic fields (equations \ref{eq:app-maxwell_transformation}), it is possible that provided the electron is sufficiently relativistic, in its own frame of rest it will `see' electromagnetic fields intense enough to access vacuum non-linearities. The first two frontiers of SF-QED that will be accessible are Radiation Reaction and multi-photon Breit-Wheeler electron pair production. Brief introductions to these phenomena are now presented.
+% TODO cite schwinger limit
+Next generation laser facilities will enable the testing of decades old theoretical predictions of \ac{SF-QED}. Already Fedeli \textit{et al} have shown in simulations that current PW-class laser facilities can access the regime using an all-optical set up based on laser-solid surface interactions \cite{fedeliProbingStrongfieldQED2020}. The Schwinger Limit $E_\mathrm{S} = \qty{1.32e18}{V.m^{-1}}$ is field intensity at which the vacuum becomes non-linear. If by some means an electron can be directed towards a plane electromagnetic wave, by consideration of the Lorentz transformations of electromagnetic fields (equations \ref{eq:app-maxwell_transformation}), it is possible that provided the electron is sufficiently relativistic, in its own frame of rest it will `see' electromagnetic fields intense enough to access vacuum non-linearities. The first two frontiers of SF-QED that will be accessible are Radiation Reaction and multi-photon Breit-Wheeler electron pair production. Brief introductions to these phenomena are now presented.
 
 \subsection{High-energy photon emission and radiation reaction}
 When a charged particle undergoes an acceleration, it emits electromagnetic radiation. If the electromagnetic field is sufficiently strong, \textit{i.e.} approaching the Schwinger Limit in the rest frame of the particle, then a non-neglible fraction of the particle momentum can be transferred to the emitted high energy photon, substantially impacting the dynamics of the accelerated particle. This back reaction is known as \ac{RR}.
