--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -363,6 +363,7 @@ Finally, Figure \ref{fig:zvphhgbeamfourier} compares the spectra of the reflecte
 \end{figure}
 Individual harmonics are not resolved due to blueshifts between successive pulse cycles from considerable hole boring, a phenomenon discussed in great detail in the following Chapter. The spectrum from the circularly polarised light is typically over two orders of magnitude below that for linearly polarised light. Thus, all defining characteristics of the ZVP mechanism have been identified in 3D simulations with the notable exception of the energy scalings. Next generation supercomputers will be required to perform such parameter scans.
 % TODO: \textbf{**To do: these dynamics plots need fixing. Should add the times, also e and f have distance instead of time on y axis, also need to convert from timstep to time. D) needs teh scale changing. also the x axis needs converting to distance. Also to do I need to change the colour of that FFT graph**}
+% TODO Add details about CSE and plot from reviewers comments including Ey field shape. Also notes in misc chapter about VLA etc. 
 
 \section{The ZVP electron bunch}\label{sec:zvp-bunches}
 Following the excellent agreement demonstrated between 2 and 3D PIC simulations, the remainder of this Chapter explores ZVP primarily in 2D. Previous work on the ZVP mechanism has highlighted the high energy and short duration of electron bunches, what follows is a full characterisation of their properties. A ZVP electron bunch is an electron bunch produced via the ZVP mechanism. Once produced and accelerated across the pseudocapacitor field, it is launched back in the laser propagation direction. While the bunch has no spatial separation over energies when propagating with the zero of the vector potential, the turning point of the electrons is longitudinal momentum dependent due to the Coulomb attraction of the ions after overshooting the pseudocapacitor field. Baeva \textit{et al} showed that the electron bunch has a quasi-monoenergetic spectrum: the electron bunch is now of attosecond duration in the spectro-temporal domain and there is a one-to-one relationship between energy and position with the higher energies trailing the lower energies. The full bunch is confined to 130 as while a single energy confined to 5 as. If, however, the plasma bulk is transversely mass-limited relative to the laser spot size, when rotated back towards the plasma block, some of the electron bunch will overshoot and escape the potential well without significant chirping of the bunch as can be seen in Figure \ref{fig:zvp3d}. Such electron bunches retain their high charge density and ultra-short duration with the tradeoff of increased divergence. Note that electron bunch properties are imprinted in the transmitted harmonics: high divergence but attosecond duration.
@@ -378,7 +379,7 @@ ZVP electron bunches can therefore be placed into two categories: ultra-high cha
 	\caption[2D PIC simulation results qualitatively describing typical mass-limited ZVP electron bunch structure.]{2D PIC simulation results qualitatively describing typical mass-limited ZVP electron bunch structure. a) Electron energy density for the full simulation window, corresponds to Figure \ref{fig:zvp3d}f). The box highlights the bunch presented in the following plots. b) Electron number density of the electron bunch. c) Electron energy density of the electron bunch, the colourbar scale has been increased compared to Figure a) to observe the internal structure. d) The mean electron energy across the electron bunch, suggesting a position dependent energy or quasi-monoenergetic nature to the electron bunch \cite{baevaZeroVectorPotential2011}. Cells with no macroparticles are black. e) The transverse phase space in the 2D simulation plane. The ellipse describes the calculated emittance. The skew of the ellipse is a consequence of a low density tail on the phase space beyond the bottom left corner. f) This plot was extracted from the equivalent 3D simulation and describes the transverse emittance in the $z$-direction. Again the ellipse marks the emittance. The relatively well-defined border to the phase space and the mild tilt (indicating only mild divergence) are direct consequences of the 2D nature of the interaction.}
 	\label{fig:zvptypicalbunch}
 \end{figure}
-The electron bunch under interrogation is ultra-relativistic with a mean energy of \qty{51\pm 11}{MeV} and a duration of 35 as. It propagates at an angle of -0.393 rad relative to the laser propagation direction, \textit{i.e.} the $x$-axis, and has a transverse geometric emittance in the simulation plane (the $x$-$y$ plane) of \qty{35 \pm 7}{nm.rad}. The calculation of the transverse geometric emittance, a measure of the quality of the electron beam, is given in Appendix \ref{app:1-basics-transverse_emittance}. Note that while the bunch does not propagate in the laser propagation direction, this does not mean it must be rejected under consideration of the ZVP bunch conditions. We must expand the definition of a ZVP electron bunch. In the mass-limited case, a bunch must propagate at some angle to the laser due to conservation of canonical momentum while it remains in the thrall of the laser pulse. For an equivalent bunch in a corresponding 3D simulation, the transverse geometric emittance in the $z$ plane is \qty{15\pm 11}{nm.rad}. This electron bunch has a total charge of 0.35 nC for a slab of plasma of thickness $0.75\lambda$ in the $z$-direction. Note again the two-dimensional nature of the interaction geometry. Electrons a distance less than twice the relativistic Larmor radius, 
+The electron bunch under interrogation is ultra-relativistic with a mean energy of \qty{51\pm 11}{MeV} and a duration of 35 as. It propagates at an angle of -0.393 rad relative to the laser propagation direction, \textit{i.e.} the $x$-axis, and has a transverse geometric emittance in the simulation plane (the $x$-$y$ plane) of \qty{35 \pm 7}{nm.rad}. The calculation of the transverse geometric emittance, a measure of the quality of the electron beam, is given in Appendix \ref{app:1-basics-transverse_emittance}. Note that while the bunch does not propagate in the laser propagation direction, this does not mean it must be rejected under consideration of the ZVP bunch conditions. We must expand the definition of a ZVP electron bunch. In the mass-limited case, a bunch must propagate at some angle to the laser due to conservation of canonical momentum while it remains in the thrall of the laser pulse. For an equivalent bunch in a corresponding 3D simulation, the transverse geometric emittance in the $z$ plane is \qty{7.4\pm 1}{nm.rad}. This electron bunch has a total charge of 0.35 nC for a slab of plasma of thickness $0.75\lambda$ in the $z$-direction. Note again the two-dimensional nature of the interaction geometry. Electrons a distance less than twice the relativistic Larmor radius, 
 \begin{equation}\label{eq:zvp_rL}
 	r_\mathrm{L} = \frac{\gamma m_\mathrm{e}v}{e|\mathbf{B}|}
 \end{equation}
@@ -397,7 +398,9 @@ Equation \ref{eq:zvp_N} can be rewritten in terms of fundamental constants as
 \end{equation}
 For these simulation parameters, this corresponds to a total bunch charge, $Q = eN$, of 0.37 nC, a remarkably successful prediction of the ZVP model. Perhaps counter-intuitively, it would appear the total charge scales inversely with the plasma density. Instead, charge can be increased either by increasing the laser pulse intensity or $L_z$. Indeed, provided the laser pulse intensity remains relativistic, the focal spot can be increased indefinitely and there is no limit to the mass-limited electron bunch total charge. For a realistic laser pulse with beam width $10 \lambda$ incident on a larger plasma block, Equation \ref{eq:zvp_N2} predicts a charge of 9.3 nC.
 
-Figure \ref{fig:zvptypicalbunchlines}a compares the electron bunch energy to an equivalent bunch produced by a circularly polarised laser pulse\footnote{A circularly polarised laser pulse will expel electrons from a mass-limited target in a corkscrew shape, the bunch is therefore only loosely equivalent.}. The mean electron bunch energy is over three times lower as there is no ZVP acceleration phase and there is no quasi-monochromatic structure \cite{baevaZeroVectorPotential2011}. Figure \ref{fig:zvptypicalbunchlines}b plots the mean electron bunch energy in time at a point as the bunch passes, clearly demonstrating the attosecond duration of the electron bunch.
+Caution is necessary when the standard definition of emittance is applied to a non-Gaussian beam profile risking over- or underestimating the emittance. When applied to an ideal Gaussian distribution, the elliptical contour that defines the emittance contains 39.3 \% of the beam particles \cite{mcdonaldMethodsEmittanceMeasurement1989}, however, Figures \ref{fig:zvptypicalbunch} e) and f) contain 75.5 \% and 38.6 \% of the beam respectively. The large overestimate of the former is a consequence of the long low density tail on the distribution to the bottom left of the plot.
+
+Figure \ref{fig:zvptypicalbunchlines}a compares the electron bunch energy to an equivalent bunch produced by a circularly polarised laser pulse\footnote{A circularly polarised laser pulse will expel electrons from a mass-limited target in a corkscrew shape, the bunch is therefore only loosely equivalent.}. The mean electron bunch energy is over three times lower as there is no ZVP acceleration phase and there is no quasi-monochromatic structure \cite{baevaZeroVectorPotential2011}. Figure \ref{fig:zvptypicalbunchlines} b) plots the mean electron bunch energy in time at a point as the bunch passes, clearly demonstrating the attosecond duration of the electron bunch.
 \begin{figure}
 	\centering
 	\includegraphics[width=1\linewidth]{figures/zvp/zvp_typical_bunch_lines}
