--- a/text/chx-misc.tex
+++ b/text/chx-misc.tex
@@ -287,3 +287,17 @@ Another thing I still need to do is gonoskov technique to get bunch thickness, a
 
 \section{Things I may want to include or random notes}
 Note that ZVP does not describe the peak energies in the bunches, then JxB applies, since there are always some electrons outside of the well defined sharp boundary when the density is not high enough to impose adiabaticity. 
+
+
+The phase at ejection is locked at the electromagnetic field peak of the laser pulse cycle. Diffraction around the target edge does occur and can be observed in Figure 10 but primarily not in the vicinity of the electron bunches (electron bunches that undergo Vacuum Laser Acceleration (VLA) will be ejected to the other side to that experiencing diffraction). As in the work of Thévenet \textit{et al}, not all electrons in the bunch will experience VLA, only those electrons propagating close to parallel to laser pulse, the rest that dephase do not gain further energy \cite{Thevenet2016}. Electrons that do not retain their phase will be randomly ponderomotively accelerated and decelerated across laser cycles, hence in the far field, there will be high energy attosecond electron bunches surrounded by a low energy noise of electrons. Note that the strong modulation of the reflected field for these high laser intensities has not yet been considered for VLA in reflection, and would likely limit possible accelerations, while HHG in transmission is always weaker \cite{cousens2020}, ensuring the presence of a fundamental laser pulse to perform the VLA
+
+reword:
+`Figure \ref{fig:3D_HHG}a compares the incident laser pulse to the strongly modulated reflected pulse in the 3D PIC simulation. 
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{3D_HHG.png}
+	\caption{\textbf{Electric field temporal structure in 3D Particle-In-Cell (PIC) simulation with $\mathbf{a_0 = 100}$, $\mathbf{\bar{n}_\mathrm{e}}$ = 100.} a) Temporal variation of the normalised vector potential of the incident and reflected laser pulses along the polarisation axis of the incident laser pulse. The reflected pulse demonstrates attosecond radiation spikes without the need for spectral filtering. b) The spectral intensity of the reflected radiation obtained via a Fourier transform of the pulse in a). The fit is calculated following the methodology of Edwards and Mikhailova \cite{edwards2020x}: $\omega_\mathrm{b}/\omega_\mathrm{L}$ defines the cut off above which an ordinary least squares fit to $\sim n^{-p}$ yields an exponent, $p > 4/3$. Beyond the cutoff the spectrum is predicted to scale as $\sim n^{-10/3}$. The fit is a simple weighted polynomial fit to the logarithm of the data using the NumPy polyfit module.}
+	\label{fig:3D_HHG}
+\end{figure}
+The Fourier transform of the reflected pulse is presented in Figure \ref{fig:3D_HHG}b. Due to the high intensities in these simulations, the spectrum is of the modified CSE type detailed by Edwards and Mikhailova \cite{edwards2020x}: initially the spectral intensity scales as $\sim n^{-4/3}$ up to a cut off determined by the advance time bunch width of radiating electrons after which it scales as $\sim n^{-10/3}$. Edwards and Mikhailova demonstrated that this cut off, extracted from the internal dynamics of the system can be well approximated by the point where the fit to the spectrum drops below the $\sim n^{-4/3}$ scaling, at harmonic number, $n = 12$ in this simulation. This 3D simulation result is consistent with the $n = 11.3$ determined by Edwards and Mikhailova in their most similar 1D simulation at $a_0 =100$, $\bar{n}_\mathrm{e} = 90$, $\theta = 45$\degree. It is also interesting that since their definition of the bunch width corresponds to the temporal width of the radiation spike at observation, taking the full-width-half-maximum of the CSE type spikes (between $t = 15$ and 26 fs) in Figure \ref{fig:3D_HHG}a) as the cut off harmonic for each spike gives a mean harmonic cut off of $n = 11.4$ consistent with the spectrum fit and corresponding to an average pulse duration of 292 as. Hence, the cut off can infer the attosecond pulse duration from a simple UV spectrometer measurement without the need for complex attosecond resolution diagnostics. A second cut off dependent on the peak gamma factor of radiating electrons and beyond which the spectrum decays exponentially is not captured at this simulation resolution. The deviation of the spectrum from regularly spaced harmonics is a natural consequence of the high laser pulse intensity: the non-negligible hole boring velocity (scaling linearly with the electric field strength of the laser pulse \cite{robinsonRelativisticallyCorrectHoleboring2009}) significantly lengthens the path of the reflected pulse, Doppler shifting harmonics between successive pulse cycles.'
+
