--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -203,7 +203,7 @@
 %%%%% CHAPTERS
 % Add or remove any chapters you'd like here, by file name (excluding '.tex'):
 \flushbottom
-%\include{text/ch1-intro}
+\include{text/ch1-intro}
 \include{text/ch2-zvp}
 %\include{text/ch3-orion}
 %\include{text/chx-misc}
